# mcpreviewer

./: .mcpreviewer.yml  .mcpreviewer.yml.example  DetailDesign.md  Dockerfile  HighLevelDesign.md  LICENSE  README.md  Requirement.txt  pyproject.toml
.github/workflows/: mcpreviewer.yml  publish.yml  test.yml
mcpreviewer/: mcp_server.py
mcpreviewer/app/: config.py  github_client.py  main.py  webhook_handler.py
mcpreviewer/cli/: main.py
mcpreviewer/core/: classifier.py  comment_renderer.py  detector.py  differ.py  llm_classifier.py  parser.py  pipeline.py  policy.py  recommender.py  scorer.py  summarizer.py
mcpreviewer/models/: types.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_comment_renderer.py  test_detector.py  test_differ.py  test_llm_classifier.py  test_mcp_server_smoke.py  test_parser.py  test_pipeline.py  test_policy.py  test_recommender.py  test_scorer.py  test_summarizer.py  test_webhook_handler.py
tests/fixtures/: mcp_annotations.json  mcp_delete_tool.yaml  mcp_description_only.json  mcp_malformed.json  mcp_multi_tool.json  mcp_scope_base.json  mcp_scope_expansion.json  mcp_sensitive_domain.json  mcp_servers_format.json  mcp_simple.json  mcp_unknown_tool.json  mcp_write_tool.json  policy_default.yml  policy_malformed.yml  policy_strict.yml
